@@ -2,24 +2,31 @@ package com.parut.order.settlement.application;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.inOrder;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.IntStream;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InOrder;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.dao.OptimisticLockingFailureException;
 
 import com.parut.order.global.exception.BusinessException;
 import com.parut.order.global.exception.ErrorCode;
 import com.parut.order.order.application.port.in.OrderItemQueryUseCase;
 import com.parut.order.settlement.domain.Settlement;
-import com.parut.order.settlement.domain.SettlementStatus;
 import com.parut.order.settlement.infrastructure.persistence.SettlementRepository;
 
 @ExtendWith(MockitoExtension.class)
@@ -29,6 +36,7 @@ class SettlementServiceTest {
     private static final UUID SELLER_ID = UUID.fromString("01991a36-dfe8-78b4-aeb5-ec869d15a6b2");
     private static final UUID FIRST_SETTLEMENT_ID = UUID.fromString("01991a36-dfe8-78b4-aeb5-ec869d15a6b3");
     private static final UUID SECOND_SETTLEMENT_ID = UUID.fromString("01991a36-dfe8-78b4-aeb5-ec869d15a6b4");
+    private static final UUID THIRD_SETTLEMENT_ID = UUID.fromString("01991a36-dfe8-78b4-aeb5-ec869d15a6b7");
     private static final UUID FIRST_ORDER_ITEM_ID = UUID.fromString("01991a36-dfe8-78b4-aeb5-ec869d15a6b5");
     private static final UUID SECOND_ORDER_ITEM_ID = UUID.fromString("01991a36-dfe8-78b4-aeb5-ec869d15a6b6");
     private static final Instant COMPLETION_TIME = Instant.parse("2026-09-20T00:00:00Z");
@@ -40,71 +48,98 @@ class SettlementServiceTest {
     @Mock
     private OrderItemQueryUseCase orderItemQueryUseCase;
 
+    @Mock
+    private SettlementCompletionProcessor settlementCompletionProcessor;
+
     @InjectMocks
     private SettlementService settlementService;
 
     @Test
-    @DisplayName("여러 PENDING 정산을 같은 시각과 관리자로 완료한다")
-    void 다건_완료() {
+    @DisplayName("항목 실패 뒤의 정산까지 계속 처리하고 성공과 실패를 요청 순서대로 구분한다")
+    void 성공_실패_성공_계속_처리() {
         Settlement first = settlement(FIRST_ORDER_ITEM_ID, ELIGIBLE_AT);
-        Settlement second = settlement(SECOND_ORDER_ITEM_ID, ELIGIBLE_AT);
-        when(settlementRepository.findAllById(List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID)))
-                .thenReturn(List.of(first, second));
+        Settlement third = settlement(SECOND_ORDER_ITEM_ID, ELIGIBLE_AT);
+        when(settlementCompletionProcessor.completeOne(FIRST_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenReturn(first);
+        when(settlementCompletionProcessor.completeOne(SECOND_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenThrow(new BusinessException(ErrorCode.SETTLEMENT_ALREADY_COMPLETED));
+        when(settlementCompletionProcessor.completeOne(THIRD_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenReturn(third);
 
-        settlementService.completeSettlements(
+        List<SettlementCompletionResult> results = settlementService.completeSettlements(
+                List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID, THIRD_SETTLEMENT_ID), ADMIN_ID, COMPLETION_TIME);
+
+        assertThat(results).containsExactly(
+                SettlementCompletionResult.success(first),
+                SettlementCompletionResult.failure(SECOND_SETTLEMENT_ID, ErrorCode.SETTLEMENT_ALREADY_COMPLETED),
+                SettlementCompletionResult.success(third));
+        InOrder order = inOrder(settlementCompletionProcessor);
+        order.verify(settlementCompletionProcessor).completeOne(FIRST_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME);
+        order.verify(settlementCompletionProcessor).completeOne(SECOND_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME);
+        order.verify(settlementCompletionProcessor).completeOne(THIRD_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME);
+    }
+
+    @Test
+    @DisplayName("낙관적 락 충돌은 CONCURRENT_MODIFICATION 항목 실패로 기록한다")
+    void 낙관적_락_충돌_항목_실패() {
+        Settlement first = settlement(FIRST_ORDER_ITEM_ID, ELIGIBLE_AT);
+        when(settlementCompletionProcessor.completeOne(FIRST_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenReturn(first);
+        // 커밋 시점 버전 충돌은 Processor 본문이 아니라 프록시에서 던져진다.
+        when(settlementCompletionProcessor.completeOne(SECOND_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenThrow(new OptimisticLockingFailureException("정산 버전 충돌"));
+
+        List<SettlementCompletionResult> results = settlementService.completeSettlements(
                 List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID), ADMIN_ID, COMPLETION_TIME);
 
-        assertThat(first.getStatus()).isEqualTo(SettlementStatus.COMPLETED);
-        assertThat(second.getStatus()).isEqualTo(SettlementStatus.COMPLETED);
-        assertThat(first.getSettledAt()).isEqualTo(COMPLETION_TIME);
-        assertThat(second.getSettledAt()).isEqualTo(COMPLETION_TIME);
-        assertThat(first.getProcessedBy()).isEqualTo(ADMIN_ID);
-        assertThat(second.getProcessedBy()).isEqualTo(ADMIN_ID);
+        assertThat(results).containsExactly(
+                SettlementCompletionResult.success(first),
+                SettlementCompletionResult.failure(SECOND_SETTLEMENT_ID, ErrorCode.CONCURRENT_MODIFICATION));
     }
 
     @Test
-    @DisplayName("완료된 정산이 섞이면 다른 정산도 변경하지 않는다")
-    void 완료된_정산_포함_전체_실패() {
-        Settlement pending = settlement(FIRST_ORDER_ITEM_ID, ELIGIBLE_AT);
-        Settlement completed = settlement(SECOND_ORDER_ITEM_ID, ELIGIBLE_AT);
-        completed.complete(COMPLETION_TIME.minusSeconds(1), ADMIN_ID);
-        when(settlementRepository.findAllById(List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID)))
-                .thenReturn(List.of(pending, completed));
+    @DisplayName("예상하지 못한 예외는 전파하고 남은 정산을 처리하지 않는다")
+    void 시스템_예외_전파() {
+        Settlement first = settlement(FIRST_ORDER_ITEM_ID, ELIGIBLE_AT);
+        when(settlementCompletionProcessor.completeOne(FIRST_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenReturn(first);
+        when(settlementCompletionProcessor.completeOne(SECOND_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME))
+                .thenThrow(new IllegalStateException("트랜잭션을 시작할 수 없습니다."));
 
         assertThatThrownBy(() -> settlementService.completeSettlements(
-                List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID), ADMIN_ID, COMPLETION_TIME))
-                .extracting(e -> ((BusinessException) e).getErrorCode())
-                .isEqualTo(ErrorCode.SETTLEMENT_ALREADY_COMPLETED);
-        assertThat(pending.getStatus()).isEqualTo(SettlementStatus.PENDING);
+                List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID, THIRD_SETTLEMENT_ID), ADMIN_ID, COMPLETION_TIME))
+                .isInstanceOf(IllegalStateException.class);
+
+        verify(settlementCompletionProcessor, never())
+                .completeOne(THIRD_SETTLEMENT_ID, ADMIN_ID, COMPLETION_TIME);
     }
 
     @Test
-    @DisplayName("없는 정산이 섞이면 전체를 변경하지 않는다")
-    void 없는_정산_포함_전체_실패() {
-        Settlement pending = settlement(FIRST_ORDER_ITEM_ID, ELIGIBLE_AT);
-        when(settlementRepository.findAllById(List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID)))
-                .thenReturn(List.of(pending));
+    @DisplayName("입력 검증에 실패하면 정산을 한 건도 처리하지 않는다")
+    void 입력_검증_실패() {
+        List<UUID> tooManyIds = IntStream.range(0, 51)
+                .mapToObj(index -> UUID.randomUUID())
+                .toList();
+        List<List<UUID>> invalidIds = Arrays.asList(
+                null,
+                List.of(),
+                tooManyIds,
+                List.of(FIRST_SETTLEMENT_ID, FIRST_SETTLEMENT_ID),
+                Arrays.asList(FIRST_SETTLEMENT_ID, null));
 
-        assertThatThrownBy(() -> settlementService.completeSettlements(
-                List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID), ADMIN_ID, COMPLETION_TIME))
+        invalidIds.forEach(ids -> assertThatThrownBy(
+                () -> settlementService.completeSettlements(ids, ADMIN_ID, COMPLETION_TIME))
                 .extracting(e -> ((BusinessException) e).getErrorCode())
-                .isEqualTo(ErrorCode.SETTLEMENT_NOT_FOUND);
-        assertThat(pending.getStatus()).isEqualTo(SettlementStatus.PENDING);
-    }
-
-    @Test
-    @DisplayName("정산 가능 시각 전인 대상이 섞이면 다른 정산도 변경하지 않는다")
-    void 정산_가능_시각_전_전체_실패() {
-        Settlement pending = settlement(FIRST_ORDER_ITEM_ID, ELIGIBLE_AT);
-        Settlement notEligible = settlement(SECOND_ORDER_ITEM_ID, COMPLETION_TIME.plusSeconds(1));
-        when(settlementRepository.findAllById(List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID)))
-                .thenReturn(List.of(pending, notEligible));
-
+                .isEqualTo(ErrorCode.INVALID_INPUT_VALUE));
         assertThatThrownBy(() -> settlementService.completeSettlements(
-                List.of(FIRST_SETTLEMENT_ID, SECOND_SETTLEMENT_ID), ADMIN_ID, COMPLETION_TIME))
+                List.of(FIRST_SETTLEMENT_ID), null, COMPLETION_TIME))
                 .extracting(e -> ((BusinessException) e).getErrorCode())
-                .isEqualTo(ErrorCode.INVALID_STATE_TRANSITION);
-        assertThat(pending.getStatus()).isEqualTo(SettlementStatus.PENDING);
+                .isEqualTo(ErrorCode.INVALID_INPUT_VALUE);
+        assertThatThrownBy(() -> settlementService.completeSettlements(
+                List.of(FIRST_SETTLEMENT_ID), ADMIN_ID, null))
+                .extracting(e -> ((BusinessException) e).getErrorCode())
+                .isEqualTo(ErrorCode.INVALID_INPUT_VALUE);
+        verify(settlementCompletionProcessor, never()).completeOne(any(), any(), any());
     }
 
     private Settlement settlement(UUID orderItemId, Instant eligibleAt) {
